[package]
name = "rust-cyprto-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
async-trait = "0.1.89"
chrono = "0.4.42"
dashmap = "6.1.0"
dotenvy = "0.15.7"
eframe = "0.33.0"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
prometheus = "0.14.0"
rmp-serde = "1.3.0"
rustls = "0.23.35"
serde = "1.0.228"
serde_json = "1.0.145"
simple-websockets = "0.1.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
uuid = "1.18.1"
webpki-roots = "1.0.4"
